# kang-eda

./: .gitignore  README.md  pyproject.toml
notebook/: 3일차.ipynb  Untitled.ipynb  Untitled1.ipynb
src/kang_eda/: cli.py
tests/: first_test.py
