[project]
name = "kang-eda"
version = "0.2.0"
description = "For me Pandas"
authors = [
    {name = "khr0106", email = "kanghr990106@gmail.com"},
]
dependencies = ["pandas>=2.2.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[dependency-groups]
eda = [
    "jupyterlab>=4.3.4",
]
