[project]
name = "kang-eda"
version = "0.4.1"
description = "Default template for PDM package"
authors = [
    {name = "khr0106", email = "kanghr990106@gmail.com"},
]
dependencies = [
    "pandas>=2.2.3",
    "president-speech>=0.9.1",
    "typer>=0.15.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true


[dependency-groups]
eda = [
    "jupyterlab>=4.3.4",
]
test = [
    "pytest>=8.3.4",
]

[project.scripts]
kang-eda = "kang_eda.cli:entry_point"
